<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:src="@drawable/background_alert_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/card_alert_dialog"/>

    <TextView
        android:id="@+id/tvMessageDeleteUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/alert_dialog_delete_user_address"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="@+id/ivBackground"
        app:layout_constraintStart_toStartOf="@+id/ivBackground"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConfirmDelete"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/confirm_delete"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnNotAllowedDelete"
        app:layout_constraintEnd_toStartOf="@+id/btnNotAllowedDelete"
        app:layout_constraintTop_toTopOf="@+id/btnNotAllowedDelete" />

    <Button
        android:id="@+id/btnNotAllowedDelete"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/not_allowed_delete"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackground"
        app:layout_constraintEnd_toEndOf="@+id/ivBackground" />
</androidx.constraintlayout.widget.ConstraintLayout>